feat:Added PuzzleWrapper to Whisperer in DT2